--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="/node_modules/vue/dist/vue.min.js"></script>
     <script src="/node_modules/vue-router/dist/vue-router.js"></script>
     <script src="/node_modules/vue-masonry/dist/vue-masonry-plugin-umd.js"></script>
-    <!-- js & vue scripts -->
+    <!-- js scripts -->
     <script src="/assets/js/config.js"></script>
     <script src="/assets/js/data.js"></script>
     <script src="/assets/js/functions.js"></script>
